3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix for bug #1573294: Flesh displays speed +x and gives lot identification exp.
common/item.c
Patch initially submitted by Aaron Baugher
Yann Chachkoff 2006-12-30

Fix for bug #1528525: Sometimes "bad" initial items are created.
common/treasure.c
Changed the behavior of create_one_treasure, that will now not generate a
treasure whose base object is cursed or damned when the GT_ONLY_GOOD flag is set.
Yann Chachkoff 2006-12-30

Fix for Win32 compilation.
plugins/common/hashtable.c: missing #include for Windows.
Ryo 2009-12-29

common/c_misc.c lib/settings
Fix for bug #1622609: Specific flags no longer displayed with 'who command
Replaced [] by <> in the who output command, as [] are reserved for the various
formatting tags.
Yann Chachkoff 2006-12-29

Massive doxygenation of code. Reformat indentation. No functional change.
 common/object.c path.c player.c porting.c quest.c readable.c recipe.c re-cmp.c
  region.c shstr.c time.c treasure.c utils.c
 doc/Developers/programming_guide: add rule for function comments.
Ryo 2006-12-29

Fix previous broken commit.
 common/arch.c
Massive doxygenation of code. Reformat indentation. No functional change.
 common/friend.c glue.c holy.c image.c info.c init.c item.c links.c living.c loader.l
  logger.c los.c map.c
Ryo 2006-12-28

Massive doxygenation of code. Reformat indentation. No functional change.
 Doxyfile: extract also static and private stuff.
 common/anim.c arch.c button.c exp.c
Ryo 2006-12-27

Fix for bug #1622575: Range attack switches to punching on contact,
 applied patch courtesy Aaron Baugher
 server/skill_util.c: use good flag to not switch.
Ryo 2006-12-27
