@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Another Win32 compilation fix.
+ common/player.c: variable definition is a function start.
+Ryo 2006-12-30
+
 Fix for bug #1573294: Flesh displays speed +x and gives lot identification exp.
 common/item.c
 Patch initially submitted by Aaron Baugher
